tdf#168709: round double value instead of truncation

Regression from commit cfff893b9c82843a90aac4ecdb3a3936721b74a0
(Move unit conversion code to o3tl, and unify on that in more places,
2021-02-14).

Change-Id: If18e8537cd03d3fd516bd164c6a816f1bba38f7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192235
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit dd544837226d9af2a777c145f91972fd0b755587)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192254
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>